--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-	"name": "@jrcligny/template-javascript",
-	"description": "A template for JavaScript projects",
+	"name": "@jrcligny/js-symbol-path",
+	"description": "",
 	"version": "1.0.0",
 	"author": "Jean-Rémy Cligny",
 	"private": true,
-	"homepage": "https://github.com/jrcligny/template-javascript#readme",
+	"homepage": "https://github.com/jrcligny/js-symbol-path#readme",
 	"repository": {
 		"type": "git",
-		"url": "git+https://github.com/jrcligny/template-javascript.git"
+		"url": "git+https://github.com/jrcligny/js-symbol-path.git"
 	},
 	"bugs": {
-		"url": "https://github.com/jrcligny/template-javascript/issues"
+		"url": "https://github.com/jrcligny/js-symbol-path/issues"
 	},
-	"keywords": [
-		"GitHub",
-		"Visual Studio Code",
-		"JavaScript"
-	],
+	"keywords": [],
 	"exports": {
 		".": "./dist/main.js"
 	},
 	"engines": {
 		"node": ">=20"
 	},
+	"type": "module",
 	"scripts": {
 		"lint": "npm run lint:js",
 		"lint:js": "npx eslint .",
-		"test": "npx jest --passWithNoTests",
+		"test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
 		"package": "node esbuild.config.mjs",
 		"all": "npm run lint && npm run test && npm run package"
 	},
@@ -38,5 +35,8 @@
 		"eslint": "^9.9.0",
 		"eslint-plugin-jest": "^28.7.0",
 		"jest": "^29.7.0"
+	},
+	"dependencies": {
+		"yargs": "^17.7.2"
 	}
 }
